k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app-label
  ports:
  # Default port used by the image
  - port: 8080
    targetPort: 5001
