k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: python-app.test.com
    http:
      paths:
      - pathType: Prefix
        path: /details
        backend:
          service:
            name: python-app-service
            port:
              number: 8080
